--- a/style.scss
+++ b/style.scss
@@ -99,12 +99,11 @@ section {
         }
 
         .header-logo {
-            width: 199px;
-            height: 34px;
+            width: 200px;
             color: $color-black;
             transition: color 0.3s ease-in;
 
-            svg {
+            img {
                 width: 100%;
                 height: 100%;
             }
@@ -836,8 +835,8 @@ section {
             border-bottom: 1px solid $color-white;
 
             .logo-footer {
-                width: 196px;
-                height: 34px;
+                width: 200px;
+                filter: invert(1);
             }
 
             .footer-links {
@@ -1559,7 +1558,7 @@ section {
                 }
 
                 .header-logo {
-                    color: $color-white;
+                    filter: invert(1);
                 }
 
                 .mobile-burger {
