--- a/style.scss
+++ b/style.scss
@@ -993,6 +993,63 @@ section {
     }
 }
 
+#payments {
+    .first-row {
+        margin-bottom: 0;
+
+        .title-wrapper {
+            margin-bottom: 20px;
+        }
+    }
+
+    .second-row {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .copy {
+        width: 20px;
+        height: 20px;
+        margin-left: 10px;
+        position: relative;
+        z-index: 1;
+        display: inline;
+    
+        img {
+            width: 20px;
+            height: 20px;    
+        }
+    
+        &::after {
+            content: "✓";
+            color: white;
+            background-color: $color-red;
+            position: absolute;
+            font-size: 10px;
+            top: 0;
+            left: -2px;
+            width: 25px;
+            height: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 20px;
+            z-index: 2;
+            opacity: 0;
+            transition: opacity 100ms;
+        }
+    
+        &.--active {
+            &::after {
+                opacity: 1;
+            }
+        }
+    }
+
+    padding-bottom: 40px;
+}
+
 @media (max-width: 1439px) {
 
     html {
@@ -1540,6 +1597,14 @@ section {
 
         &.--big-margin {
             margin-bottom: 48px;
+        }
+    }
+
+    #payments {
+        .second-row {
+            .number-text {
+                font-size: 16px;
+            }
         }
     }
 
